Replacing tsCodes.ts with index.ts

--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,6 @@
       </div>
     </div>
 
-    <script src="../dist/tsCode.js"></script>
+    <script src="../dist/bundle.js"></script>
   </body>
 </html>
