TimeLine Component created

--- a/src/Compnents/Controls/Controls.html
+++ b/src/Compnents/Controls/Controls.html
@@ -1,4 +1,6 @@
 <template id="controls">
+  <link rel="stylesheet" href="./Controls.scss" />
+
   <div class="controls">
     <i class="fa-solid fa-backward"></i>
     <i class="fa-solid fa-circle-play middle-icon"></i>
@@ -7,6 +9,7 @@
   </div>
 
   <script
+    defer
     src="https://kit.fontawesome.com/bef6cdabcc.js"
     crossorigin="anonymous"
   ></script>
