New implementation for TimeLine

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
       referrerpolicy="no-referrer"
     />
   </head>
+
   <body>
     <audio src="../songs/01 Believer.mp3"></audio>
     <div class="player-box">
@@ -36,9 +37,10 @@
             <div class="current-time">00:00</div>
             <div class="song-time">03:23</div>
           </div>
-          <div class="time-line">
+          <!-- <div class="time-line">
             <div class="filler"></div>
-          </div>
+          </div> -->
+          <time-line></time-line>
         </div>
         <div class="controls">
           <i class="fa-solid fa-backward"></i>
