--- a/src/index.html
+++ b/src/index.html
@@ -37,10 +37,10 @@
             <div class="current-time">00:00</div>
             <div class="song-time">03:23</div>
           </div>
-          <!-- <div class="time-line">
+          <div class="time-line">
             <div class="filler"></div>
-          </div> -->
-          <time-line></time-line>
+          </div>
+          <!-- <time-line></time-line> -->
         </div>
         <div class="controls">
           <i class="fa-solid fa-backward"></i>
